# Lingo

./: .gitignore  CMakeLists.txt  Lingo.command  README.md
assets/: progress.txt  words.txt
macos/: Lingo.command.in
src/: main.cpp
src/achievements/: Achievements.hpp  AchievementsManager.cpp  AchievementsManager.hpp
src/core/: MistakeManager.cpp  MistakeManager.hpp  MistakeWord.hpp  Word.hpp  WordDatabase.cpp  WordDatabase.hpp
src/levels/: Level.hpp  LevelManager.cpp  LevelManager.hpp
src/progress/: Progress.hpp  ProgressManager.cpp  ProgressManager.hpp
src/quiz/: Question.hpp  QuizGame.cpp  QuizGame.hpp  QuizResult.hpp
src/utils/: AppPaths.cpp  AppPaths.hpp  Random.cpp  Random.hpp  TerminalUi.hpp
